fix palettes, add palette packages to DESCRIPTION

--- a/aws-usage-report/DESCRIPTION
+++ b/aws-usage-report/DESCRIPTION
@@ -16,6 +16,10 @@ Imports:
     paws,
     here,
     glue,
-    patchwork
+    patchwork,
+    paletteer,
+    ggpomological,
+    khroma
 Remotes:
-    openscapes/kyber
+    openscapes/kyber,
+    gadenbuie/ggpomological
