--- a/.github/workflows/create-pdf-report.yml
+++ b/.github/workflows/create-pdf-report.yml
@@ -43,7 +43,9 @@ jobs:
           outdir="aws-usage-report/reports"
           outname="aws-usage-report_$ym.pdf"
           quarto render aws-usage-report/aws-usage-report.qmd -P "year_month:$ym" --output "$outname"
-          mkdir -p "$outdir" && mv "$outname" "$outdir"
+          mkdir -p "$outdir" && \
+          mv "$outname" "$outdir" && \
+          echo "\n- [Usage report for $ym](reports/$outname)" >> "aws-usage-report/README.md"
           git config --local user.name "$GITHUB_ACTOR"
           git config --local user.email "$GITHUB_ACTOR@users.noreply.github.com"
           git add "$outdir/$outname" && git commit -m "Render report $ym" || echo "No changes to commit"
