--- a/.github/workflows/create-pdf-report.yml
+++ b/.github/workflows/create-pdf-report.yml
@@ -48,5 +48,5 @@ jobs:
           echo "\n- [Usage report for $ym](reports/$outname)" >> "aws-usage-report/README.md"
           git config --local user.name "$GITHUB_ACTOR"
           git config --local user.email "$GITHUB_ACTOR@users.noreply.github.com"
-          git add "$outdir/$outname" && git commit -m "Render report $ym" || echo "No changes to commit"
+          git add "$outdir/$outname" "aws-usage-report/README.md" && git commit -m "Render report $ym" || echo "No changes to commit"
           git push origin || echo "No changes to commit"
