--- a/.github/workflows/create-pdf-report.yml
+++ b/.github/workflows/create-pdf-report.yml
@@ -45,7 +45,7 @@ jobs:
           quarto render aws-usage-report/aws-usage-report.qmd -P "year_month:$ym" --output "$outname"
           mkdir -p "$outdir" && \
           mv "$outname" "$outdir" && \
-          echo "\n- [Usage report for $ym](reports/$outname)" >> "aws-usage-report/README.md"
+          printf "\n- [Usage report for $ym](reports/$outname)" >> "aws-usage-report/README.md"
           git config --local user.name "$GITHUB_ACTOR"
           git config --local user.email "$GITHUB_ACTOR@users.noreply.github.com"
           git add "$outdir/$outname" "aws-usage-report/README.md" && git commit -m "Render report $ym" || echo "No changes to commit"
