--- a/.github/workflows/create-pdf-report.yml
+++ b/.github/workflows/create-pdf-report.yml
@@ -30,6 +30,8 @@ jobs:
       # From https://github.com/r-lib/actions/tree/v2-branch/setup-r
       - name: Setup R
         uses: r-lib/actions/setup-r@v2
+        with:
+          use-public-rspm: true
 
       - name: Setup R dependencies
         uses: r-lib/actions/setup-r-dependencies@v2
