--- a/aws-usage-report/DESCRIPTION
+++ b/aws-usage-report/DESCRIPTION
@@ -1,9 +1,9 @@
 Package: OpenscapesHubUsageReport
-Title: Not a package, but generates a monthly qmd report of AWS usage. This 
-    DESCRIPTION file is only used to document and install required packages to 
+Title: Not a package, but generates a monthly qmd report of AWS usage. This
+    DESCRIPTION file is only used to document and install required packages to
     render the report.
 Version: 0.0.0.9000
-Authors@R: 
+Authors@R:
     person("Andy", "Teucher", , "andy@andyteucher.ca", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0002-7840-692X"))
 License: MIT + file LICENSE
@@ -19,7 +19,10 @@ Imports:
     patchwork,
     paletteer,
     ggpomological,
-    khroma
+    khroma,
+    sixtyfour,
+    ggtext
 Remotes:
     openscapes/kyber,
-    gadenbuie/ggpomological
+    gadenbuie/ggpomological,
+    getwilds/sixtyfour
